[metadata]
name = leveldb
version = 0.202
description = Python bindings for leveldb database library
long_description = Python bindings for leveldb database library
long_description_content_type = text/plain
url = https://github.com/rjpower/py-leveldb
maintainer = Arni Mar Jonsson
maintainer_email = arnimarkj@gmail.com
license = BSD-3-Clause
license_files =
  LICENSE
  LICENSE.leveldb
  LICENSE.snappy
classifiers =
  Development Status :: 4 - Beta
  Environment :: Other Environment
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: POSIX
  Programming Language :: C++
  Programming Language :: Python
  Topic :: Database
  Topic :: Software Development :: Libraries

[options]
python_requires = >=3.7
